# parsley

./: .gitignore  LICENSE  README.md  ascii.py  bitstring.py  code_can_common.c  code_genmessage_types.c  constants.py  enum_was_taken.py  field.py  fields.py  gen_code_can_common.c  gen_code_can_common.h  gen_message_types.h  message_types.py  numeric.py  parse_to_object.py  parsley.py  parsley_definitions.py  parsley_test.py  parsley_test_reference.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  switch.py
.github/: CODEOWNERS
.github/workflows/: lint.yml  unit-test.yml
code_gen/: create_message_types.py
parsley/: __init__.py  bitstring.py  body_template.txt  c_build_function.txt  c_get_function.txt  can_common_c.txt  can_common_h.txt  copymachine.py  create_can_common.py  create_can_common_c.py  create_message_types.py  fields.py  generate_canlib.py  message_definitions.py  message_object.py  message_types.py  parse_utils.py  parsley.py  parsley_definitions.py
parsley/canlib/: gen_code_can_common.c  gen_code_can_common.h
src/parsley/: __init__.py  bitstring.py  fields.py  message_definitions.py  message_types.py  parse_to_object.py  parse_utils.py  parsley.py  parsley_message.py  payloads.py  types.py
tests/: __init__.py  test_bitstring.py  test_can_messages.py  test_can_metadata.py  test_fields.py  test_framework.py  test_message_definitions.py  test_parse_to_object.py  test_parsley.py  test_parsley_message.py  test_payloads.py  test_types.py  test_utils.py  utils.py  utils_test.py
tools/: gpsdisplay.py  printer.py
utils/: test_utils.py
