# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "parsley"
version = "2026.4"
description = "Library to transcode CAN messages and human-readable text"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Waterloo Rocketry", email = "contact@waterloorocketry.com" }
]
requires-python = ">=3.11"
dependencies = [
    "blessings>=1.7",
    "crc8>=0.2.1",
    "deprecated>=1.2.18",
    "pyfiglet>=1.0.4",
    "pydantic>=2.12.3",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/waterloo-rocketry/parsley"
Repository = "https://github.com/waterloo-rocketry/parsley"
